# Endstufe

./: .gitignore  Endstufe.kicad_dru  Endstufe.kicad_prl  Endstufe.kicad_pro  Endstufe.kicad_sch  PCM1865.kicad_sch  PCM5122.kicad_sch  PCM5122A.kicad_sch  PCM9211.kicad_sch  RP2040.kicad_sch  TPA3116D2.kicad_sch  TPS62933.kicad_sch  fp-lib-table  generate_output.kibot.yaml
Endstufe_v1/: Endstufe.kicad_prl  Endstufe.kicad_pro  Endstufe.kicad_sch  PCM1865.kicad_sch  PCM5122.kicad_sch  PCM9211.kicad_sch  RP2040.kicad_sch  TPA3116D2.kicad_sch  TPS62933.kicad_sch  sym-lib-table
Endstufe_v1/code/: CMakeLists.txt  README  endstufe.c
Endstufe_v1/code/drivers/: drivers.h  pcm1865.c  pcm5122.c  pcm9211.c  tpa3116d2.c
Endstufe_v1/libraries/: Endstufe.bak  Endstufe.kicad_sym
Endstufe_v2/: Endstufe_v2.kicad_prl  Endstufe_v2.kicad_pro  Endstufe_v2.kicad_sch  I2C.txt  PCM1865.kicad_sch  cables.txt  sym-lib-table
Endstufe_v2/AmplifierBoard/: AmplifierBoard.kicad_pcb  AmplifierBoard.kicad_prl  AmplifierBoard.kicad_pro  AmplifierBoard.kicad_sch  TPA3126D2.kicad_sch  fp-info-cache  sym-lib-table
Endstufe_v2/ControlBoard/: ADAU1463.kicad_sch  ADAU1467.kicad_sch  ADAU1962A.kicad_sch  ControlBoard.kicad_pcb  ControlBoard.kicad_prl  ControlBoard.kicad_pro  ControlBoard.kicad_sch  DAC_Filter.kicad_sch  Power.kicad_sch  RP2040.kicad_sch  fp-info-cache  fp-lib-table
Endstufe_v2/InputBoard/: InputBoard.kicad_dru  InputBoard.kicad_pcb  InputBoard.kicad_prl  InputBoard.kicad_pro  InputBoard.kicad_sch  PCM1865.kicad_sch  PCM9211.kicad_sch  (+1 more)
Endstufe_v2/Software/RP2040/: CMakeLists.txt  i2c register dump
Endstufe_v2/Software/RP2040/lib/: CMakeLists.txt
Endstufe_v2/Software/RP2040/lib/i2c_slave/: CMakeLists.txt  i2c_slave.c
Endstufe_v2/Software/RP2040/lib/i2c_slave/include/: i2c_fifo.h  i2c_slave.h
Endstufe_v2/Software/RP2040/src/: CMakeLists.txt  I2CSlave.c  RP2040.c  definitions.h
Endstufe_v2/Software/RP2040/src/dsp/: ADAU1467.cpp  ADAU1467.h  CMakeLists.txt  SigmaStudioFW.cpp  SigmaStudioFW.h  USER_SETTINGS.h
Endstufe_v2/Software/RP2040/src/dsp/SigmaStudioOutput/: systemfiles_IC_1.h  systemfiles_IC_1_REG.h  systemfiles_IC_2.h  systemfiles_IC_2_REG.h
documents/: Endstufe v2.docx  Endstufe.docx  JLCPCB DFM analysis.docx  ~$dstufe.docx
(+120 files in other folders)
